<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="375dp"
        android:layout_height="182dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446">

        <TextView
            android:id="@+id/lblTotalConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_da_conta"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtTotalConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/insira_o_total_da_conta"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/lblPessoas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantidade_de_pessoas"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPessoas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/insira_quantas_pessoas"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/lblGorjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gorjeta"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="376dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <SeekBar
            android:id="@+id/skGorjeta"
            android:layout_width="257dp"
            android:layout_height="57dp"
            android:min="10"
            android:max="100"
            android:progress="10"

            />

        <TextView
            android:id="@+id/lblPorcentagem"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/lblFixoValorGorjeta"
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/valor_gorjeta"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblValorGorjeta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/r_0"
            android:textAlignment="center"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/lblFixoTotalFinal"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblTotalFinal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/r_0"
            android:textAlignment="center"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/lblFixoTotalPessoa"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_por_pessoa"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblTotalPorPessoa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/r_00"
            android:textAlignment="center"
            android:textStyle="italic" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="234dp"
        android:layout_height="177dp"
        android:contentDescription="@string/cone_carteira_com_dinheiro"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wallet_tip" />

    <Button
        android:id="@+id/btEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textColor="#7B1FA2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />


</androidx.constraintlayout.widget.ConstraintLayout>